[package]
name = "finquant"
version = "0.0.53"
authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
license = "MIT OR Apache-2.0"
description = "Experimental Rust Quant Library"
keywords = ["quant", "calendar", "market-risks", "rates", "derivatives",]
readme = "README.md"
repository = "https://github.com/quantransform/finquant"
edition = "2024"
rust-version = "1.85"

[features]

[dependencies]
chrono = { version = "^0.4.39", features = ["serde"] }
iso_currency = { version = "^0.5.1", features = ["with-serde"] }
roots = "^0.0.8"
serde = { version = "^1.0.218", features = ["derive"] }
serde_json = "^1.0.119"
strum = "^0.27.1"
strum_macros = "^0.27.1"
thiserror = "^2.0.11"
typetag = "^0.2.19"

[dev-dependencies]
rstest = "^0.24.0"
