[package]
name = "finquant"
version = "0.0.54"
authors = ["Jeremy Wang <j.wang@quantransform.co.uk>", "David Steiner <david_j_steiner@yahoo.co.nz>"]
license = "MIT OR Apache-2.0"
description = "Experimental Rust Quant Library"
keywords = ["quant", "calendar", "market-risks", "rates", "derivatives",]
readme = "README.md"
repository = "https://github.com/quantransform/finquant"
edition = "2024"
rust-version = "1.85"

[features]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
iso_currency = { version = "0.5.3", features = ["with-serde"] }
lazy_static = "1.4"
once_cell = "1.21.3"
roots = "0.0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
typetag = "0.2.20"

[dev-dependencies]
rstest = "0.26.1"
